--- a/public/404.html
+++ b/public/404.html
@@ -18,10 +18,24 @@
 <link rel="canonical" href="http://localhost:1313/hugofr/404.html">
 <link rel="stylesheet" href="/hugofr/book.min.758c5b3aa63700b216ef8d869ed6f076387c5640b3e3e3d86b53bd5148ba24ee.css" integrity="sha256-dYxbOqY3ALIW742Gntbwdjh8VkCz4&#43;PYa1O9UUi6JO4=" crossorigin="anonymous">
   <script defer src="/hugofr/fuse.min.js"></script>
-  <script defer src="/hugofr/en.search.min.1b5e966a57c3f0ae69b1dc706811e5d5fcf2a5e2d79c96b7729388485ca404ea.js" integrity="sha256-G16WalfD8K5psdxwaBHl1fzypeLXnJa3cpOISFykBOo=" crossorigin="anonymous"></script>
+  <script defer src="/hugofr/en.search.min.4cf417127322b1b5e5b338e3940cf6de301d79a5f92cce1d342a387874663963.js" integrity="sha256-TPQXEnMisbXlszjjlAz23jAdeaX5LM4dNCo4eHRmOWM=" crossorigin="anonymous"></script>
 
   <script defer src="/hugofr/sw.min.549782fdaa632d837f911e7c48408e5e24f6e122317b26383f0ef841986e6546.js" integrity="sha256-VJeC/apjLYN/kR58SECOXiT24SIxeyY4Pw74QZhuZUY=" crossorigin="anonymous"></script>
-<!--
+
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-41WGTGX8FE"></script>
+      <script>
+        var doNotTrack = false;
+        if ( false ) {
+          var dnt = (navigator.doNotTrack || window.doNotTrack || navigator.msDoNotTrack);
+          var doNotTrack = (dnt == "1" || dnt == "yes");
+        }
+        if (!doNotTrack) {
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+          gtag('config', 'G-41WGTGX8FE');
+        }
+      </script><!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
 -->
